--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "build": "nest build",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
+        "start:dev": "cross-env NODE_ENV=development nest start --watch",
+        "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
         "start:prod": "cross-env NODE_ENV=production node dist/main",
         "start:prod-local": "cross-env NODE_ENV=production nest start --watch",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
